[gd_scene load_steps=5 format=3 uid="uid://c4f6b31dge3f5"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_e3adn"]
[ext_resource type="PackedScene" uid="uid://b7dfki75p417j" path="res://Scenes/Objects/player.tscn" id="1_usevd"]
[ext_resource type="PackedScene" uid="uid://kki5xo2mmo0e" path="res://Scenes/Objects/enemy.tscn" id="2_dce12"]

[sub_resource type="Curve2D" id="Curve2D_8oxi8"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 320, 0)
}
point_count = 2

[node name="Main" type="Node"]
script = ExtResource("1_e3adn")
enemy_scene = ExtResource("2_dce12")

[node name="Player" parent="." instance=ExtResource("1_usevd")]

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(160, 135)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="Path" type="Path2D" parent="."]
curve = SubResource("Curve2D_8oxi8")

[node name="SpawnLocation" type="PathFollow2D" parent="Path"]

[node name="PlayerBulletContainer" type="Node" parent="."]

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="SpawnTimer" to="." method="enemy_timer_finished"]
